FCREPO-3201 - Transmission fixity when staging to OCFL object (#1690)
* During a commit, a digest is read from the header file for binaries and provided to the OCFL client for transmission fixity purposes, if there is an appropriate digest available

* Use updateObject to create new objects when versioning enabled

* Register digests for files modified in a session after write, use those for transmission fixity instead of retrieving from sidecar files

* Normalize separators in subpaths during registration

* Refactor adding of files during commit to add the staging path directly and then register digests from map

* Encode subpath when registering digests

Resolves: https://jira.lyrasis.org/browse/FCREPO-3201